--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -11,13 +11,13 @@
 <a href="profile.html"> Save</a>
 
 
-<img src="banner.jpeg"
+<img src="images/banner.jpeg"
      width= 100%
      height="200px"/>
 
 <input type="file"/>
 <br>
-<img src="cartoon.png"
+<img src="images/cartoon.png"
      width= 48px
      height="48px"/>
 <br>
