--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -8,7 +8,7 @@
 <a href="navigation.html"> Back</a>
 <h1> Tuiter</h1>
 <h2> Home </h2>
-<img src="cartoon.png"
+<img src="images/cartoon.png"
      width="48px"
      height="48px"/>
 
@@ -28,7 +28,7 @@
 
 <ul>
   <li>  <a href="topic.html"> Topic 123</a> </li>
-  <img src="icon2.jpeg"
+  <img src="images/icon2.jpeg"
        width="48px"
        height="48px"/>
   <a href="profile.html"> Kaitlyn</a> @kaitlyn - 2h
@@ -44,7 +44,7 @@
 
   <br> <br>
   <li>  <a href="topic.html"> Topic 234 </a> </li>
-  <img src="icon3.png"
+  <img src="images/icon3.png"
        width="48px"
        height="48px"/>
   <a href="profile.html"> Bob </a> @bob - 4h
