--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -8,10 +8,10 @@
 <a href="navigation.html"> Back</a>
 <h1> Tuiter </h1>
 <h2> Profile </h2>
-<img src="banner.jpeg"
+<img src="images/banner.jpeg"
      width= 100%
      height="200px"/>
-<img src="cartoon.png"
+<img src="images/cartoon.png"
      width="48px"
      height="48px"/>
 <a href="edit-profile.html"> Edit Profile</a>
