--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -47,25 +47,33 @@
 
             <div class="wd-icon-containers">
                 <div class="wd-float-icons">
+                    <a href ="#">
                     <p class="wd-icons wd-float-left">&#128488;</p>
                     <p class="wd-number wd-float-left"> 4 </p>
                     <div class="wd-float-done"></div>
+                    </a>
                 </div>
 
                 <div class="wd-float-icons">
+                    <a href ="#">
                     <p class="wd-icons wd-float-left">&#9842;</p>
                     <p class="wd-number wd-float-left"> 22 </p>
                     <div class="wd-float-done"></div>
+                    </a>
                 </div>
 
                 <div class="wd-float-icons">
+                    <a href ="#">
                     <p class="wd-icon-heart wd-float-left"> &#10084&#65039  </p>
                     <p class="wd-number-red wd-float-left"> 99 </p>
                     <div class="wd-float-done"></div>
+                    </a>
                 </div>
 
                 <div class="wd-float-icons">
+                    <a href ="#">
                     <p class="wd-icons">&#x2191</p>
+                    </a>
                 </div>
 
                 <div class="wd-float-done"></div>
@@ -110,25 +118,32 @@
 
             <div class="wd-icon-containers">
                 <div class="wd-float-icons">
+                    <a href ="#">
                     <p class="wd-icons wd-float-left">&#128488;</p>
                     <p class="wd-number wd-float-left"> 82 </p>
                     <div class="wd-float-done"></div>
+                    </a>
                 </div>
 
                 <div class="wd-float-icons">
+                    <a href ="#">
                     <p class="wd-icons wd-float-left">&#9842;</p>
                     <p class="wd-number wd-float-left"> 21 </p>
                     <div class="wd-float-done"></div>
+                    </a>
                 </div>
 
                 <div class="wd-float-icons">
+                    <a href ="#">
                     <p class="wd-icon-heart wd-float-left"> &#10084&#65039  </p>
                     <p class="wd-number-red wd-float-left"> 39 </p>
                     <div class="wd-float-done"></div>
+                    </a>
                 </div>
-
+                <a href ="#">
                 <div class="wd-float-icons">
                     <p class="wd-icons">&#x2191</p>
+                    </a>
                 </div>
 
                 <div class="wd-float-done"></div>
