--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
       <li><a href="tuiter/navigation.html">Tuiter</a></li>
       <li> <a href="labs/a3/index.html"> Assignment 3 Labs </a> </li>
       <li> <a href="labs/a4/index.html"> Assignment 4 labs</a> </li>
+      <li> <a href="labs/a5/index.html"> Assignment 5 labs</a> </li>
+      <li> <a href="labs/a5/todos/index.html"> Assignment 5 Todo list</a> </li>
+
+
     </ul>
     <!--
       This HTML file is a template.
